Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/annotations/typeAnnotations/failures/TypeOnAnonClass.out
TypeOnAnonClass.java:13:40: compiler.err.annotation.type.not.applicable.to.type: X
1 error
